update to manifest-v3

--- a/Audio-Transcription/style.css
+++ b/Audio-Transcription/style.css
@@ -54,20 +54,29 @@ label {
   margin-left: 15px;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
 .button {
   padding: 10px;
   border: 2px solid darkred;
   font-size: 16px;
-  background-color: lavenderblush;
   font-weight: bold;
-  margin: 10px 20px;
   cursor: pointer;
   white-space: nowrap;
-  width: 110px;
+  width: 150px;
   border-radius: 5px;
 }
 
-.button:hover {
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.button:hover:not(:disabled) {
   color: red;
   background-color: darkred;
 }
